samples/_failures_safe/1761324035_999882_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9edd5101.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9edd5101.c:171:9: error: expected expression at end of input
  171 |         } else
      |         ^
./samples/SAFE/__tmp_9edd5101.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9edd5101.c:171:9: error: expected declaration or statement at end of input
